{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 14,
  "lineage": "c83b7a90-68fe-2204-74b6-dbaec2fd7376",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d0cf3af28718ef8",
            "arn": "arn:aws:ec2:us-east-1:473876058653:instance/i-04274142c77badea4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04274142c77badea4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0012ae65c638f1262",
            "private_dns": "ip-172-31-16-47.ec2.internal",
            "private_ip": "172.31.16.47",
            "public_dns": "ec2-3-87-125-211.compute-1.amazonaws.com",
            "public_ip": "3.87.125.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 105,
                "volume_id": "vol-09e10c2f4d1fb7555",
                "volume_size": 35,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "our_group",
              "scenario"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e5bf34ad",
            "tags": {
              "Environment": "web",
              "Name": "udemy-web-udemy",
              "Project": "udemy",
              "Region": "us-east-1",
              "Timestamp": "2019-09-07T02-00-11Z"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001e02f27b30029b5",
              "sg-05b763bd695f2c1e8"
            ]
          },
          "depends_on": [
            "aws_security_group.group_1",
            "aws_security_group.scenario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473876058653:security-group/sg-001e02f27b30029b5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-001e02f27b30029b5",
            "ingress": [],
            "name": "our_group",
            "name_prefix": null,
            "owner_id": "473876058653",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "our_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-71b37908"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scenario",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473876058653:security-group/sg-05b763bd695f2c1e8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05b763bd695f2c1e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 999
              }
            ],
            "name": "scenario",
            "name_prefix": null,
            "owner_id": "473876058653",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "scenario"
            },
            "timeouts": null,
            "vpc_id": "vpc-71b37908"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "range",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 1000,
            "id": "sgrule-3180742765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001e02f27b30029b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10005,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "range_scenario_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 998,
            "id": "sgrule-1080623661",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b763bd695f2c1e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.scenario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "single",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2334047390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001e02f27b30029b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.group_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "single_scenario_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-1142558298",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b763bd695f2c1e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.scenario"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "single_scenario_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3247654554",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b763bd695f2c1e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.scenario"
          ]
        }
      ]
    }
  ]
}